<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".ui.activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="true"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="1dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/fragment_create_user_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:imeOptions="actionNext"
                    android:background="@drawable/full_transparent_yellow_stroke"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:padding="15dp"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:background="@android:color/white"
                    android:text="@string/firstname"
                    android:textColor="@android:color/black"
                    android:textSize="12sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/fragment_create_user_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:imeOptions="actionNext"
                    android:background="@drawable/full_transparent_yellow_stroke"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:padding="15dp"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:background="@android:color/white"
                    android:text="@string/lastname"
                    android:textColor="@android:color/black"
                    android:textSize="12sp" />
            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/fragment_create_user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:background="@drawable/full_transparent_yellow_stroke"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="15dp"
                android:imeOptions="actionDone"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@android:color/white"
                android:text="@string/email"
                android:textColor="@android:color/black"
                android:textSize="12sp" />
        </RelativeLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:layout_marginTop="10dp">

            <RadioButton
                android:id="@+id/fragment_create_user_radio_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/user"/>

            <RadioButton
                android:id="@+id/fragment_create_user_radio_manager"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/manager"/>

            <RadioButton
                android:id="@+id/fragment_create_user_radio_admin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/admin"/>
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:gravity="right"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/fragment_create_user_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@drawable/full_yellow_from_white_selector"
                android:clickable="true"
                android:contentDescription="@string/cancel"
                android:src="@drawable/ic_content_clear" />

            <ImageView
                android:id="@+id/fragment_create_user_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/full_yellow_from_white_selector"
                android:clickable="false"
                android:contentDescription="@string/confirm"
                android:src="@drawable/ic_action_done" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>