<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@android:color/white"
    tools:context="tech2.demo.com.demo.ui.fragments.ProfileFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/fragment_profile_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="textPersonName"
            android:imeOptions="actionNext"
            android:layout_marginTop="7dp"
            android:textColor="@android:color/black"
            android:background="@drawable/full_white_yellow_stroke_background"
            android:padding="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@android:color/white"
            android:text="@string/firstname"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/fragment_profile_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:imeOptions="actionDone"
            android:gravity="center"
            android:inputType="textPersonName"
            android:textColor="@android:color/black"
            android:background="@drawable/full_white_yellow_stroke_background"
            android:padding="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@android:color/white"
            android:text="@string/lastname"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/fragment_profile_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:gravity="center"
            android:clickable="false"
            android:focusable="false"
            android:inputType="textEmailAddress"
            android:textColor="@color/gray"
            android:background="@drawable/full_white_yellow_stroke_background"
            android:padding="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@android:color/white"
            android:text="@string/email"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/fragment_profile_calories_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/fragment_profile_expected_calories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:background="@drawable/full_white_yellow_stroke_background"
            android:inputType="numberDecimal"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@android:color/white"
            android:text="@string/expected_calories"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:gravity="right"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/fragment_profile_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@drawable/full_yellow_from_white_selector"
            android:clickable="true"
            android:contentDescription="@string/cancel"
            android:src="@drawable/ic_content_clear" />

        <ImageView
            android:id="@+id/fragment_profile_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/full_yellow_from_white_selector"
            android:clickable="false"
            android:contentDescription="@string/confirm"
            android:src="@drawable/ic_action_done" />
    </LinearLayout>

</LinearLayout>
