<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:id="@+id/fragment_create_meal_main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/fragment_create_meal_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:background="@drawable/full_transparent_yellow_stroke"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:maxLines="3"
                android:imeOptions="actionNext"
                android:minLines="3"
                android:padding="15dp"
                android:textColor="@android:color/black"
                android:textColorHint="@color/gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@android:color/white"
                android:text="@string/description"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/fragment_create_meal_number_calories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:background="@drawable/full_transparent_yellow_stroke"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:padding="15dp"
                android:maxLength="5"
                android:textColor="@android:color/black"
                android:textColorHint="@color/gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@android:color/white"
                android:text="@string/numbercalories"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="1dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/fragment_create_meal_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:background="@drawable/full_transparent_yellow_stroke"
                    android:padding="15dp"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:background="@android:color/white"
                    android:text="@string/date"
                    android:textColor="@android:color/black"
                    android:textSize="12sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/fragment_create_meal_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:background="@drawable/full_transparent_yellow_stroke"
                    android:padding="15dp"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:background="@android:color/white"
                    android:text="@string/time"
                    android:textColor="@android:color/black"
                    android:textSize="12sp" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragment_create_meal_main_layout"
        android:layout_marginRight="20dp"
        android:gravity="right"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/fragment_create_meal_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@drawable/full_yellow_from_white_selector"
            android:clickable="true"
            android:contentDescription="@string/cancel"
            android:src="@drawable/ic_content_clear" />

        <ImageView
            android:id="@+id/fragment_create_meal_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/full_yellow_from_white_selector"
            android:clickable="false"
            android:contentDescription="@string/confirm"
            android:src="@drawable/ic_action_done" />
    </LinearLayout>
</RelativeLayout>