<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/full_yellow_background"
        android:orientation="horizontal"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fragment_user_details_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nalex"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fragment_user_details_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="Joel Gouveia"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/fragment_user_details_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/full_yellow_from_white_selector"
                    android:clickable="true"
                    android:contentDescription="@string/edit_content"
                    android:src="@drawable/ic_editor_border_color" />

                <ImageView
                    android:id="@+id/fragment_user_details_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/full_yellow_from_white_selector"
                    android:clickable="true"
                    android:contentDescription="@string/delete_content"
                    android:src="@drawable/ic_action_delete_red" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_user_details_calories_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fragment_user_details_number_calories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1000"
                android:textStyle="bold"
                android:textColor="@color/foodie_green"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_details_calories"
                android:textColor="@android:color/black"
                android:textSize="12sp" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/fragment_user_details_no_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <se.emilsjolander.stickylistheaders.StickyListHeadersListView
            android:id="@+id/fragment_user_details_meals_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
</LinearLayout>
